--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "private": true,
   "scripts": {
-    "deploy": "surge ./public --domain octodex-site-cp.chris.surge.sh",
+    "deploy": "surge ./public --domain octodex.chris-sdg.surge.sh",
     "start": "browser-sync start --server 'public' --files 'public'"
   },
   "dependencies": {
